Add Command Service scaffolding - Test controller to test comms with platform service

--- a/PlatformService/appsettings.Development.json
+++ b/PlatformService/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Information"
     }
-  }
+  },
+  "CommandService": "http://localhost:5276"
 }
